Fix unreadable text in Rewind Flow

--- a/client/signup/steps/rewind-migrate/style.scss
+++ b/client/signup/steps/rewind-migrate/style.scss
@@ -38,12 +38,12 @@
 	font-size: rem( 25px );
 	font-weight: 300;
 	letter-spacing: rem( 1.5px );
-	color: var( --color-neutral-700 );
+	color: var( --color-white );
 }
 
 .rewind-switch__description {
 	max-width: 600px;
-	color: var( --color-text );
+	color: var( --color-white );
 	font-size: rem( 13.5px );
 	font-weight: 100;
 	line-height: rem( 25px );
